--- a/Houses.html
+++ b/Houses.html
@@ -117,16 +117,25 @@
 
   <section>
     <div class="product-card">
-      <img src="product1.jpg" alt="Product 1">
-      <h2>Product 1</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+      <img src="HOUSE 1.jpg" alt="HOUSE 1">
+      <h2>HOUSE 1</h2>
+      <p>G+3 HOUSE <br>
+        It Has A Map And Located In A key Area<br>
+        location =AKAKI KALITY ALEM BANK<br>
+        lies on 97 SQM <br>
+        Price=25,000,000 <br>
+        Contact us at: Phone: +251978906766/+251973126041 | Email: gizegebeyacompany@gmail.com
+       </p>
+
       <button>Add to Cart</button>
     </div>
 
-    <div class="product-card">
-      <img src="product2.jpg" alt="Product 2">
-      <h2>Product 2</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+    <div class="HOUSE 1">
+      <img src="" alt="HOUSE 1">
+      <h2>HOUSE 1</h2>
+      <p>
+
+      </p>
       <button>Add to Cart</button>
     </div>
 
