--- a/About Us.html
+++ b/About Us.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Home</title>
+  <title>About Us</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -11,7 +11,7 @@
 
     header {
       background-color: #333;
-      color: #ffffff;
+      color: #fff;
       padding: 20px;
       text-align: center;
     }
@@ -21,7 +21,6 @@
       border-radius: 50%;
       margin-right: 60%;
 }
-
     nav {
       background-color: #f2f2f2;
       padding: 20px;
@@ -53,22 +52,20 @@
     footer {
       background-color: #333;
       color: #fff;
-      padding: 10px;
+      padding: 20px;
       text-align: center;
-
     }
   </style>
   <link rel="icon" type="image/png" href="favicon.jpeg">
 </head>
 <body>
   <header>
-    <div class="logo">
-      <img src="Logo.png" alt="Gize Gebeya logo">
-  </div>
-    <h1>Welcome to Gize Gebeya Website</h1>
-    <p>Providing Quality Services Since 2015</p>
+    <h1>About Us</h1>
+    <p>Learn More About Our Company</p>
   </header>
-
+  <div class="logo">
+    <img src="Logo.png" alt="Gize Gebeya logo">
+</div>
   <nav>
     <ul>
       <li><a href="index.html">Home</a></li>
@@ -80,8 +77,22 @@
   </nav>
 
   <section>
-    <h2>Welcome to Our Home Page</h2>
-    <p>UNLEASH YOUR INVESTMENT POTENTIAL.<BR>Find your dream house And car with us.</p>
+    <h2>Our Story</h2>
+    <p>           </p>
+  </section>
+
+  <section>
+   <!-- <h2>Our Team</h2>
+    <div class="team-member">
+      <img src="team1.jpg" alt="Team Member 1">
+      <h3>John Doe</h3>
+      <p>CEO</p>
+    </div>
+    <div class="team-member">
+      <img src="team2.jpg" alt="Team Member 2">
+      <h3>Jane Smith</h3>
+      <p>CTO</p>
+    </div>-->
   </section>
 
   <footer>
