--- a/Blog.html
+++ b/Blog.html
@@ -70,6 +70,11 @@
       padding: 20px;
       text-align: center;
     }
+    .social-media a {
+      color: #fff;
+      text-decoration: none;
+      margin: 0 10px;
+    }
   </style>
   <link rel="icon" type="image/png" href="favicon.jpeg">
 </head>
@@ -95,31 +100,31 @@
   <section>
     <div class="blog post">
       <h2>The Booming Real Estate Market in Ethiopia: Opportunities and Challenges</h2>
-      <p>1 Introduction to the current state of the Ethiopian real estate market, highlighting the growth and demand for both residential and commercial properties.
-        2 Discuss the key drivers behind the real estate boom, such as urbanization, economic growth, and rising middle class.
-        3 Explore the unique challenges faced by buyers and sellers in the Ethiopian real estate market, including infrastructure development, access to financing, and regulatory frameworks.
-        4 Provide tips and strategies for navigating the Ethiopian real estate market, covering topics like property research, negotiation, and legal considerations.
+      <p>1 Introduction to the current state of the Ethiopian real estate market, highlighting the growth and demand for both residential and commercial properties. <br>
+        2 Discuss the key drivers behind the real estate boom, such as urbanization, economic growth, and rising middle class. <br>
+        3 Explore the unique challenges faced by buyers and sellers in the Ethiopian real estate market, including infrastructure development, access to financing, and regulatory frameworks. <br>
+        4 Provide tips and strategies for navigating the Ethiopian real estate market, covering topics like property research, negotiation, and legal considerations. <br>
         5 Conclude with the future outlook and potential investment opportunities in the Ethiopian real estate sector.</p>
       <a href="#">Read More</a>
     </div>
 
     <div class="blog-post">
       <h2>Navigating the Used Car Market in Ethiopia: A Buyer's Guide</h2>
-      <p>1 Overview of the used car market in Ethiopia, including the popular car models, pricing trends, and typical purchasing process.
-        2 Highlight the importance of thorough vehicle inspection and the role of trusted mechanics in the used car buying process.
-        3 Discuss the common pitfalls to avoid when buying a used car in Ethiopia, such as hidden mechanical issues, fraudulent sellers, and registration challenges.
-        4 Provide a step-by-step guide for first-time used car buyers in Ethiopia, covering topics like budgeting, research, negotiation, and financing options.
+      <p>1 Overview of the used car market in Ethiopia, including the popular car models, pricing trends, and typical purchasing process. <br>
+        2 Highlight the importance of thorough vehicle inspection and the role of trusted mechanics in the used car buying process. <br>
+        3 Discuss the common pitfalls to avoid when buying a used car in Ethiopia, such as hidden mechanical issues, fraudulent sellers, and registration challenges. <br>
+        4 Provide a step-by-step guide for first-time used car buyers in Ethiopia, covering topics like budgeting, research, negotiation, and financing options. <br>
         5 Emphasize the significance of conducting due diligence and prioritizing safety and reliability when purchasing a used car in Ethiopia.</p>
       <a href="#">Read More</a>
     </div>
 
     <div class="blog-post">
       <h2>Selling Your Car in Ethiopia: Maximizing Your Return on Investment</h2>
-      <p>1 Introduction to the current state of the Ethiopian car sales market, including factors that influence demand and pricing.
-        2 Offer tips and strategies for preparing your car for sale, such as thorough cleaning, minor repairs, and comprehensive documentation.
-        3 Discuss the various sales channels available in Ethiopia, including dealerships, online platforms, and private transactions, and the pros and cons of each.
-        4 Provide guidance on pricing your car competitively in the Ethiopian market, taking into account factors like mileage, condition, and market trends.
-        5 Advise on handling negotiations, managing test drives, and ensuring a smooth and transparent sales process.
+      <p>1 Introduction to the current state of the Ethiopian car sales market, including factors that influence demand and pricing. <br>
+        2 Offer tips and strategies for preparing your car for sale, such as thorough cleaning, minor repairs, and comprehensive documentation. <br>
+        3 Discuss the various sales channels available in Ethiopia, including dealerships, online platforms, and private transactions, and the pros and cons of each. <br>
+        4 Provide guidance on pricing your car competitively in the Ethiopian market, taking into account factors like mileage, condition, and market trends. <br>
+        5 Advise on handling negotiations, managing test drives, and ensuring a smooth and transparent sales process. <br>
         6 Emphasize the importance of understanding your rights and responsibilities as a car seller in Ethiopia to protect your interests.</p>
       <a href="#">Read More</a>
     </div>
@@ -135,8 +140,7 @@
         <a href="https://www.instagram.com/gizegebeya?igsh=bnVqdHNseXdqNDg=" class="social-icon">Instagram</a>
         <a href="https://www.facebook.com/profile.php?id=61550732175981" class="social-icon">Facebook</a>
         <a href="https://t.me/gizegebeyasale" class="social-icon">Telegram</a>
-    </div>
-    <div class="contact us">
+    
       <a href="gizegebeyacompany@gmail.com" class="social-icon">Email</a>
       <a href="https://t.me/gizegebeyacompany" class="social-icon">Telegram</a>
     </div>
