--- a/Contact us.html
+++ b/Contact us.html
@@ -89,6 +89,11 @@
       padding: 20px;
       text-align: center;
     }
+    .social-media a {
+      color: #fff;
+      text-decoration: none;
+      margin: 0 10px;
+    }
   </style>
   
 <link rel="icon" type="image/png" href="favicon.jpeg">
@@ -138,8 +143,7 @@
         <a href="https://www.instagram.com/gizegebeya?igsh=bnVqdHNseXdqNDg=" class="social-icon">Instagram</a>
         <a href="https://www.facebook.com/profile.php?id=61550732175981" class="social-icon">Facebook</a>
         <a href="https://t.me/gizegebeyasale" class="social-icon">Telegram</a>
-    </div>
-    <div class="contact us">
+  
       <a href="gizegebeyacompany@gmail.com" class="social-icon">Email</a>
       <a href="https://t.me/gizegebeyacompany" class="social-icon">Telegram</a>
     </div>
