--- a/Services.html
+++ b/Services.html
@@ -92,6 +92,11 @@
       padding: 20px;
       text-align: center;
     }
+    .social-media a {
+      color: #fff;
+      text-decoration: none;
+      margin: 0 10px;
+    }
   </style>
   <link rel="icon" type="image/png" href="favicon.jpeg">
 </head>
@@ -116,23 +121,32 @@
 
   <section>
     <div class="service-card">
-      <img src="service1.jpg" alt="Service 1">
+      <img src="LUXURY HOUSE.jpg" alt="Service 1">
       <h2>Service 1</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+      <p>At GIZE GEBEYA, we pride ourselves on providing the perfect services for all your house sale needs. Our experienced team of real estate professionals work tirelessly to ensure a smooth and successful home selling process for our clients. From expert pricing guidance and strategic marketing to seamless negotiations and a stress-free closing, we handle every aspect of the home sale with the utmost care and efficiency. Our tailored approach and unwavering commitment to customer satisfaction have made us the trusted choice for home sellers throughout the region. When you partner with [Company Name], you can have complete confidence that your home is in capable hands from start to finish. Let us demonstrate how our perfect services can maximize the value of your most valuable asset - your home.</p>
       <button>Learn More</button>
     </div>
 
     <div class="service-card">
-      <img src="service2.jpg" alt="Service 2">
+      <img src="LUXURY CAR.jpg" alt="Service 2">
       <h2>Service 2</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+      <p>At GIZE GEBEYA, we are proud to offer the perfect services for all your car selling needs. Our knowledgeable team of automotive experts work diligently to ensure a seamless and successful sales process for our clients. From accurately appraising your vehicle's value and crafting a strategic marketing plan, to handling all negotiations and paperwork, we guide you through every step with unparalleled care and expertise. Our proven track record of securing top-dollar offers andfast turnaround times has made us the go-to choice for individuals looking to sell their cars quickly and for the best price. When you partner with [Company Name], you can have complete peace of mind knowing your vehicle is in the hands of true professionals committed to delivering the perfect car sale experience. Let us demonstrate how our exceptional services can maximize the return on your automotive asset.
+
+      </p>
       <button>Learn More</button>
     </div>
 
     <div class="service-card">
       <img src="service3.jpg" alt="Service 3">
       <h2>Service 3</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+      <p>We Are Planning A New Big Surprise</p>
+      <button>Learn More</button>
+    </div>
+
+    <div class="service-card">
+      <img src="service4.jpg" alt="Service 4">
+      <h2>Service 4</h2>
+      <p>LWe Are Planning A New Big Surprise</p>
       <button>Learn More</button>
     </div>
   </section>
@@ -147,8 +161,7 @@
         <a href="https://www.instagram.com/gizegebeya?igsh=bnVqdHNseXdqNDg=" class="social-icon">Instagram</a>
         <a href="https://www.facebook.com/profile.php?id=61550732175981" class="social-icon">Facebook</a>
         <a href="https://t.me/gizegebeyasale" class="social-icon">Telegram</a>
-    </div>
-    <div class="contact us">
+    
       <a href="gizegebeyacompany@gmail.com" class="social-icon">Email</a>
       <a href="https://t.me/gizegebeyacompany" class="social-icon">Telegram</a>
     </div>
