--- a/Services.html
+++ b/Services.html
@@ -146,7 +146,7 @@
     <div class="service-card">
       <img src="service4.jpg" alt="Service 4">
       <h2>Service 4</h2>
-      <p>LWe Are Planning A New Big Surprise</p>
+      <p>We Are Planning A New Big Surprise</p>
       <button>Learn More</button>
     </div>
   </section>
