--- a/Home.html
+++ b/Home.html
@@ -76,7 +76,7 @@
 
   <nav>
     <ul>
-      <li><a href="index.html">Home</a></li>
+      <li><a href="Home.html">Home</a></li>
       <li><a href="Products.html">Products</a></li>
       <li><a href="Services.html">Services</a></li>
       <li><a href="About Us.html">About Us</a></li>
