--- a/About Us.html
+++ b/About Us.html
@@ -73,7 +73,7 @@
 </div>
   <nav>
     <ul>
-      <li><a href="index.html">Home</a></li>
+      <li><a href="Home.html">Home</a></li>
       <li><a href="Products.html">Products</a></li>
       <li><a href="Services.html">Services</a></li>
       <li><a href="About Us.html">About Us</a></li>
