--- a/Products.html
+++ b/Products.html
@@ -144,13 +144,17 @@
 
   <section>
     <div class="button-group">
-      <a href="https://gizegebeya.github.io/Gize-Gebeya-Houses/">
-        <button>Houses</button>
+     Houses
+       <a href="https://gizegebeya.github.io/Gize-Gebeya-Houses/">
+        <button><img src="LUXURY HOUSE.jpg" >
+          <a href="https://gizegebeya.github.io/Gize-Gebeya-Houses/"></button>
       </a>
     </div>
     <div class="button-group1">
+      Cars
       <a href="https://gizegebeya.github.io/Gize-Gebeya-Cars/">
-        <button>Cars</button>
+        <button><img src="LUXURY CAR.jpg">
+          <a href="https://gizegebeya.github.io/Gize-Gebeya-Cars/"></button>
       </a>
     </div>
   </section>
