--- a/About Us.html
+++ b/About Us.html
@@ -60,16 +60,21 @@
       text-decoration: none;
       margin: 0 10px;
     }
+      h2{text-size-adjust: 1px;
+    margin-right:790px;
+    }
   </style>
   <link rel="icon" type="image/png" href="favicon.jpeg">
 </head>
 <body>
   <header>
+     <div class="logo">
+    <img src="Logo.png" alt="Gize Gebeya logo">
+       <H2>GIZE GEBEYA</H2>
     <h1>About Us</h1>
     <p>Learn More About Our Company</p>
   </header>
-  <div class="logo">
-    <img src="Logo.png" alt="Gize Gebeya logo">
+ 
 </div>
   <nav>
     <ul>
@@ -82,7 +87,7 @@
   </nav>
 
   <section>
-    <h2>Our Story</h2>
+    <h1>Our Story</h1>
     <p>           </p>
   </section>
 
