--- a/Blog.html
+++ b/Blog.html
@@ -75,6 +75,9 @@
       text-decoration: none;
       margin: 0 10px;
     }
+    h2{text-size-adjust: 1px;
+    margin-right:790px;
+    }
   </style>
   <link rel="icon" type="image/png" href="favicon.jpeg">
 </head>
@@ -82,6 +85,7 @@
   <header>
     <div class="logo">
       <img src="Logo.png" alt="Gize Gebeya logo">
+       <H2>GIZE GEBEYA</H2>
   </div>
     <h1>Blog</h1>
     <p>Read Our Latest Articles</p>
@@ -99,7 +103,7 @@
 
   <section>
     <div class="blog post">
-      <h2>The Booming Real Estate Market in Ethiopia: Opportunities and Challenges</h2>
+      <h1>The Booming Real Estate Market in Ethiopia: Opportunities and Challenges</h1>
       <p>1 Introduction to the current state of the Ethiopian real estate market, highlighting the growth and demand for both residential and commercial properties. <br>
         2 Discuss the key drivers behind the real estate boom, such as urbanization, economic growth, and rising middle class. <br>
         3 Explore the unique challenges faced by buyers and sellers in the Ethiopian real estate market, including infrastructure development, access to financing, and regulatory frameworks. <br>
@@ -109,7 +113,7 @@
     </div>
 
     <div class="blog-post">
-      <h2>Navigating the Used Car Market in Ethiopia: A Buyer's Guide</h2>
+      <h1>Navigating the Used Car Market in Ethiopia: A Buyer's Guide</h1>
       <p>1 Overview of the used car market in Ethiopia, including the popular car models, pricing trends, and typical purchasing process. <br>
         2 Highlight the importance of thorough vehicle inspection and the role of trusted mechanics in the used car buying process. <br>
         3 Discuss the common pitfalls to avoid when buying a used car in Ethiopia, such as hidden mechanical issues, fraudulent sellers, and registration challenges. <br>
@@ -119,7 +123,7 @@
     </div>
 
     <div class="blog-post">
-      <h2>Selling Your Car in Ethiopia: Maximizing Your Return on Investment</h2>
+      <h1>Selling Your Car in Ethiopia: Maximizing Your Return on Investment</h1>
       <p>1 Introduction to the current state of the Ethiopian car sales market, including factors that influence demand and pricing. <br>
         2 Offer tips and strategies for preparing your car for sale, such as thorough cleaning, minor repairs, and comprehensive documentation. <br>
         3 Discuss the various sales channels available in Ethiopia, including dealerships, online platforms, and private transactions, and the pros and cons of each. <br>
