--- a/Home.html
+++ b/Home.html
@@ -62,6 +62,9 @@
       text-decoration: none;
       margin: 0 10px;
     }
+      h2{text-size-adjust: 1px;
+    margin-right:790px;
+    }
   </style>
   <link rel="icon" type="image/png" href="favicon.jpeg">
 </head>
@@ -69,6 +72,7 @@
   <header>
     <div class="logo">
       <img src="Logo.png" alt="Gize Gebeya logo">
+      <H2>GIZE GEBEYA</H2>
   </div>
     <h1>Welcome to Gize Gebeya Website</h1>
     <p>Providing Quality Services Since 2015</p>
@@ -85,7 +89,7 @@
   </nav>
 
   <section>
-    <h2>Welcome to Our Home Page</h2>
+    <h1>Welcome to Our Home Page</h1>
     <p>UNLEASH YOUR INVESTMENT POTENTIAL.<BR>Find your dream house And car with us.</p>
   </section>
 
