--- a/Index.html
+++ b/Index.html
@@ -93,6 +93,9 @@
       padding: 20px;
       text-align: center;
     }
+       h2{text-size-adjust: 1px;
+    margin-right:790px;
+    }
   </style>
   <link rel="icon" type="image/png" href="favicon.jpeg">
 </head>
@@ -100,6 +103,7 @@
   <header>
     <div class="logo">
       <img src="Logo.png" alt="Gize Gebeya logo">
+        <H2>GIZE GEBEYA</H2>
   </div>
     <h1>Houses</h1>
     <p>Choose Your Suitable Products</p>
@@ -118,7 +122,7 @@
   <section>
     <div class="product-card">
       <img src="HOUSE 1.jpg" alt="HOUSE 1">
-      <h2>HOUSE 1</h2>
+      <h1>HOUSE 1</h1>
       <p>G+3 HOUSE <br>
         It Has A Map And Located In A key Area<br>
         location =AKAKI KALITY ALEM BANK<br>
@@ -132,7 +136,7 @@
 
     <div class="HOUSE 1">
       <img src="" alt="HOUSE 1">
-      <h2>HOUSE 1</h2>
+      <h1>HOUSE 2</h1>
       <p>
 
       </p>
