--- a/Products.html
+++ b/Products.html
@@ -120,6 +120,9 @@
       text-decoration: none;
       margin: 0 10px;
     }
+       h2{text-size-adjust: 1px;
+    margin-right:790px;
+    }
   </style>
   <link rel="icon" type="image/png" href="favicon.jpeg">
 </head>
@@ -161,21 +164,21 @@
 <!-- <section>
     <div class="product-card">
       <img src="product1.jpg" alt="Product 1">
-      <h2>Product 1</h2>
+      <h1>Product 1</h1>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
       <button>Add to Cart</button>
     </div>
 
     <div class="product-card">
       <img src="product2.jpg" alt="Product 2">
-      <h2>Product 2</h2>
+      <h1>Product 2</h1>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
       <button>Add to Cart</button>
     </div>
 
     <div class="product-card">
       <img src="product3.jpg" alt="Product 3">
-      <h2>Product 3</h2>
+      <h1>Product 3</h1>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
       <button>Add to Cart</button>
     </div>
