--- a/Contact us.html
+++ b/Contact us.html
@@ -94,10 +94,23 @@
       text-decoration: none;
       margin: 0 10px;
     }
+    .qr-codes-footer img {
+            width: 200px;
+            height: 250px;
+            margin: 0 10px;
+            margin-left: 1000px ;
+    }
+    .social-media img, .contact-us img {
+            width: 80px;
+            height: 80px;
+            vertical-align: middle;
+            margin-right: 5px;
+            border-radius: 50%;
+        }
   </style>
   
 <link rel="icon" type="image/png" href="favicon.jpeg">
-</head>
+<head>
 <body>
   <header>
     <h1>Contact Us</h1>
@@ -108,7 +121,7 @@
 </div>
   <nav>
     <ul>
-      <li><a href="Home.html">Home</a></li>
+      <li><a href="index.html">Home</a></li>
       <li><a href="aboutus.html">About Us</a></li>
       <li><a href="products.html">Products</a></li>
       <li><a href="services.html">Services</a></li>
@@ -135,19 +148,23 @@
 
   <footer>
     <p><!--Contact us at: 123 Main Street, City, State, ZIP | Phone: 123-456-7890 | Email: info@example.com--></p>
-    <section>
-      <div class="social-media">
-        <a href="#" class="social-icon">YouTube</a>
-        <a href="https://www.tiktok.com/@gize.gebeya0?_t=8nsX7AxzoIP&_r=1" class="social-icon">Tiktok</a>
-        <a href="#" class="social-icon">Twitter</a>
-        <a href="https://www.instagram.com/gizegebeya?igsh=bnVqdHNseXdqNDg=" class="social-icon">Instagram</a>
-        <a href="https://www.facebook.com/profile.php?id=61550732175981" class="social-icon">Facebook</a>
-        <a href="https://t.me/gizegebeyasale" class="social-icon">Telegram</a>
-  
-      <a href="gizegebeyacompany@gmail.com" class="social-icon">Email</a>
-      <a href="https://t.me/gizegebeyacompany" class="social-icon">Telegram</a>
+      <p>Contact us at: Phone: +251978906766/+251973126041 | Email: gizegebeyacompany@gmail.com</p>
+      <section>
+        <div class="social-media">
+          <a href="#" class="social-icon"><img src="Youtube.png" alt="YouTube"></a>
+          <a href="https://www.tiktok.com/@gize.gebeya0?_t=8nsX7AxzoIP&_r=1" class="social-icon"><img src="TIKTOK.png" alt="TIKTOK"></a>
+          <a href="#" class="social-icon"><img src="X.jpg" alt="X"></a>
+          <a href="https://www.instagram.com/gizegebeya?igsh=bnVqdHNseXdqNDg=" class="social-icon"><img src="INSTAGRAM.jpg" alt="instagram"></a>
+          <a href="https://www.facebook.com/profile.php?id=61550732175981" class="social-icon"><img src="FACEBOOK.png" alt="facebook"></a>
+          <a href="https://t.me/gizegebeyasale" class="social-icon"><img src="Telegram channel.jpg" alt="Telegram"></a>
+     
+        <a href="gizegebeyacompany@gmail.com" class="social-icon"><img src="GMAIL.png" alt="gmail"></a>
+        <a href="https://t.me/gizegebeyacompany" class="social-icon"><img src="Telegram.jpg" alt="TELEGRAM"></a>
+      </div>
+      <div class="qr-codes-footer">
+        <img src="PORTFOLIO QR CODE.png" alt="Portfolio QR Code">
     </div>
-    </section>
-  </footer>
+      </section>
+    </footer>
 </body>
 </html>
