--- a/index.html
+++ b/index.html
@@ -93,9 +93,22 @@
       padding: 20px;
       text-align: center;
     }
-       h2{text-size-adjust: 1px;
+    h2{text-size-adjust: 1px;
     margin-right:750px;
     }
+    .qr-codes-footer img {
+            width: 200px;
+            height: 250px;
+            margin: 0 10px;
+            margin-left: 1000px ;
+    }
+    .social-media img, .contact-us img {
+            width: 80px;
+            height: 80px;
+            vertical-align: middle;
+            margin-right: 5px;
+            border-radius: 50%;
+        }
   </style>
   <link rel="icon" type="image/png" href="favicon.jpeg">
 </head>
@@ -103,7 +116,7 @@
   <header>
     <div class="logo">
       <img src="Logo.png" alt="Gize Gebeya logo">
-        <H2>GIZE GEBEYA</H2>
+      <H2>GIZE GEBEYA</H2>
   </div>
     <h1>Houses</h1>
     <p>Choose Your Suitable Products</p>
@@ -111,7 +124,7 @@
 
   <nav>
     <ul>
-      <li><a href="Home.html">Home</a></li>
+      <li><a href="index.html">Home</a></li>
       <li><a href="Products.html">Products</a></li>
       <li><a href="Services.html">Services</a></li>
       <li><a href="About Us.html">About Us</a></li>
@@ -155,17 +168,19 @@
     <p>Contact us at: Phone: +251978906766/+251973126041 | Email: gizegebeyacompany@gmail.com</p>
     <section>
       <div class="social-media">
-        <a href="#" class="social-icon">YouTube</a>
-        <a href="https://www.tiktok.com/@gize.gebeya0?_t=8nsX7AxzoIP&_r=1" class="social-icon">Tiktok</a>
-        <a href="#" class="social-icon">Twitter</a>
-        <a href="https://www.instagram.com/gizegebeya?igsh=bnVqdHNseXdqNDg=" class="social-icon">Instagram</a>
-        <a href="https://www.facebook.com/profile.php?id=61550732175981" class="social-icon">Facebook</a>
-        <a href="https://t.me/gizegebeyasale" class="social-icon">Telegram</a>
+        <a href="#" class="social-icon"><img src="Youtube.png" alt="YouTube"></a>
+        <a href="https://www.tiktok.com/@gize.gebeya0?_t=8nsX7AxzoIP&_r=1" class="social-icon"><img src="TIKTOK.png" alt="TIKTOK"></a>
+        <a href="#" class="social-icon"><img src="X.jpg" alt="X"></a>
+        <a href="https://www.instagram.com/gizegebeya?igsh=bnVqdHNseXdqNDg=" class="social-icon"><img src="INSTAGRAM.jpg" alt="instagram"></a>
+        <a href="https://www.facebook.com/profile.php?id=61550732175981" class="social-icon"><img src="FACEBOOK.png" alt="facebook"></a>
+        <a href="https://t.me/gizegebeyasale" class="social-icon"><img src="Telegram channel.jpg" alt="Telegram"></a>
+   
+      <a href="gizegebeyacompany@gmail.com" class="social-icon"><img src="GMAIL.png" alt="gmail"></a>
+      <a href="https://t.me/gizegebeyacompany" class="social-icon"><img src="Telegram.jpg" alt="TELEGRAM"></a>
     </div>
-    <div class="contact us">
-      <a href="gizegebeyacompany@gmail.com" class="social-icon">Email</a>
-      <a href="https://t.me/gizegebeyacompany" class="social-icon">Telegram</a>
-    </div>
+    <div class="qr-codes-footer">
+      <img src="PORTFOLIO QR CODE.png" alt="Portfolio QR Code">
+  </div>
     </section>
   </footer>
 </body>
