--- a/Home.html
+++ b/Home.html
@@ -111,7 +111,7 @@
     <section>
       <div class="social-media">
         <a href="#" class="social-icon"><img src="Youtube.png" alt="YouTube"></a>
-        <a href="https://www.tiktok.com/@gize.gebeya0?_t=8nsX7AxzoIP&_r=1" class="social-icon"><img src="TIKTOK.png" alt="TIKTOK"></a>
+        <a href="https://www.tiktok.com/@gizegebeyasales?_r=1" class="social-icon"><img src="TIKTOK.png" alt="TIKTOK"></a>
         <a href="#" class="social-icon"><img src="X.jpg" alt="X"></a>
         <a href="https://www.instagram.com/gizegebeya?igsh=bnVqdHNseXdqNDg=" class="social-icon"><img src="INSTAGRAM.jpg" alt="instagram"></a>
         <a href="https://www.facebook.com/profile.php?id=61550732175981" class="social-icon"><img src="FACEBOOK.png" alt="facebook"></a>
