--- a/Contact us.html
+++ b/Contact us.html
@@ -162,8 +162,9 @@
         <a href="https://t.me/gizegebeyacompany" class="social-icon"><img src="Telegram.jpg" alt="TELEGRAM"></a>
       </div>
       <div class="qr-codes-footer">
-        <img src="PORTFOLIO QR CODE.png" alt="Portfolio QR Code">
-    </div>
+      <a href="https://gizegebeya.github.io/Gize-Gebeya-Customer-s-website/">
+      <img src="QR CODE FOR CUSTOMERS.png" alt="qrcodeforcustomers"></a>
+  </div>
       </section>
     </footer>
 </body>
