--- a/Services.html
+++ b/Services.html
@@ -182,8 +182,9 @@
       <a href="gizegebeyacompany@gmail.com" class="social-icon"><img src="GMAIL.png" alt="gmail"></a>
       <a href="https://t.me/gizegebeyacompany" class="social-icon"><img src="Telegram.jpg" alt="TELEGRAM"></a>
     </div>
-    <div class="qr-codes-footer">
-      <img src="PORTFOLIO QR CODE.png" alt="Portfolio QR Code">
+   <div class="qr-codes-footer">
+      <a href="https://gizegebeya.github.io/Gize-Gebeya-Customer-s-website/">
+      <img src="QR CODE FOR CUSTOMERS.png" alt="qrcodeforcustomers"></a>
   </div>
     </section>
   </footer>
