--- a/Contact us.html
+++ b/Contact us.html
@@ -121,7 +121,7 @@
 </div>
   <nav>
     <ul>
-      <li><a href="index.html">Home</a></li>
+      <li><a href="Home.html">Home</a></li>
       <li><a href="aboutus.html">About Us</a></li>
       <li><a href="products.html">Products</a></li>
       <li><a href="services.html">Services</a></li>
