--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 
   <nav>
     <ul>
-      <li><a href="index.html">Home</a></li>
+      <li><a href="Home.html">Home</a></li>
       <li><a href="Products.html">Products</a></li>
       <li><a href="Services.html">Services</a></li>
       <li><a href="About Us.html">About Us</a></li>
