--- a/About Us.html
+++ b/About Us.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>About Us</title>
   <style>
     body {
@@ -14,13 +16,30 @@
       color: #fff;
       padding: 20px;
       text-align: center;
+      position: relative;
     }
+
+    .logo {
+      display: flex;
+      align-items: center;
+      justify-content: flex-start;
+      position: absolute;
+      top: 20px;
+      left: 20px;
+    }
+
     .logo img {
       height: auto;
-      max-width: 10%;
+      max-width: 50px;
       border-radius: 50%;
-      margin-right: 60%;
-}
+      margin-right: 10px;
+    }
+
+    .logo h2 {
+      margin: 0;
+      font-size: 1.5rem;
+    }
+
     nav {
       background-color: #f2f2f2;
       padding: 20px;
@@ -31,11 +50,14 @@
       list-style-type: none;
       margin: 0;
       padding: 0;
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+      
     }
 
     nav ul li {
-      display: inline;
-      margin-right: 35px;
+      margin: 10px 15px;
     }
 
     nav ul li a {
@@ -44,9 +66,11 @@
       padding: 10px;
     }
 
+
+
     section {
-      padding: 150px;
-      text-align: center;
+      padding: 50px 20px;
+      text-align: left;
     }
 
     footer {
@@ -55,40 +79,80 @@
       padding: 20px;
       text-align: center;
     }
+
     .social-media a {
       color: #fff;
       text-decoration: none;
       margin: 0 10px;
     }
-      h2{text-size-adjust: 1px;
-    margin-right:750px;
-    }
+
     .qr-codes-footer img {
-            width: 200px;
-            height: 250px;
-            margin: 0 10px;
-            margin-left: 1000px ;
+      width: 100px;
+      height: 100px;
+      margin: 10px;
     }
-    .social-media img, .contact-us img {
-            width: 80px;
-            height: 80px;
-            vertical-align: middle;
-            margin-right: 5px;
-            border-radius: 50%;
-        }
+
+    .social-media img {
+      width: 40px;
+      height: 40px;
+      vertical-align: middle;
+      margin-right: 5px;
+      border-radius: 50%;
+    }
+
+    /* Responsive Design */
+    @media (max-width: 768px) {
+      .logo {
+        flex-direction: column;
+        align-items: center;
+      }
+
+      .logo img {
+        max-width: 30px;
+        margin-right: 0;
+      }
+
+      .logo h2 {
+        font-size: 1.2rem;
+      }
+
+      nav ul {
+        flex-direction: column;
+      }
+
+      nav ul li {
+        margin: 5px 0;
+      }
+
+      section {
+        padding: 20px;
+      }
+
+      .qr-codes-footer img {
+        width: 80px;
+        height: 80px;
+      }
+
+      .social-media img {
+        width: 30px;
+        height: 30px;
+      }
+    }
   </style>
   <link rel="icon" type="image/png" href="favicon.jpeg">
 </head>
 <body>
   <header>
-     <div class="logo">
-    <img src="Logo.png" alt="Gize Gebeya logo">
-       <H2>GIZE GEBEYA</H2>
+    <div class="logo">
+      <img src="Logo.png" alt="Gize Gebeya logo">
+      <h2>GIZE GEBEYA</h2>
+      <br>
+      <br>
+    </div>
     <h1>About Us</h1>
     <p>Learn More About Our Company</p>
   </header>
- 
-</div>
+
   <nav>
     <ul>
       <li><a href="Home.html">Home</a></li>
@@ -100,43 +164,27 @@
   </nav>
 
   <section>
-    <h1>Our Story</h1>
-    <p>           </p>
-  </section>
-
-  <section>
-   <!-- <h2>Our Team</h2>
-    <div class="team-member">
-      <img src="team1.jpg" alt="Team Member 1">
-      <h3>John Doe</h3>
-      <p>CEO</p>
-    </div>
-    <div class="team-member">
-      <img src="team2.jpg" alt="Team Member 2">
-      <h3>Jane Smith</h3>
-      <p>CTO</p>
-    </div>-->
+    <h2>Our Story</h2>
+    <p>Welcome to Gize Gebeya, your trusted house and car brokerage. We specialize in offering efficient, legitimate, and secure services for buying and selling properties and vehicles. With our expertise, we ensure authenticity, transparency, and data security. Our market knowledge allows us to negotiate the best deals, prioritizing customer satisfaction and building long-term relationships. Choose Gize Gebeya for your real estate and automotive needs.</p>
   </section>
 
   <footer>
-    <p>Contact us at: Phone: +251978906766/+251973126041 | Email: gizegebeyacompany@gmail.com</p>
-    <section>
-      <div class="social-media">
-        <a href="#" class="social-icon"><img src="Youtube.png" alt="YouTube"></a>
-        <a href="https://www.tiktok.com/@gizegebeyasales?_r=1" class="social-icon"><img src="TIKTOK.png" alt="TIKTOK"></a>
-        <a href="#" class="social-icon"><img src="X.jpg" alt="X"></a>
-        <a href="https://www.instagram.com/gizegebeya?igsh=bnVqdHNseXdqNDg=" class="social-icon"><img src="INSTAGRAM.jpg" alt="instagram"></a>
-        <a href="https://www.facebook.com/profile.php?id=61550732175981" class="social-icon"><img src="FACEBOOK.png" alt="facebook"></a>
-        <a href="https://t.me/gizegebeyasale" class="social-icon"><img src="Telegram channel.jpg" alt="Telegram"></a>
-   
-      <a href="gizegebeyacompany@gmail.com" class="social-icon"><img src="GMAIL.png" alt="gmail"></a>
+    <p>Contact us at: Phone: +251978906766 / +251973126041 | Email: gizegebeyacompany@gmail.com</p>
+    <div class="social-media">
+      <a href="#" class="social-icon"><img src="Youtube.png" alt="YouTube"></a>
+      <a href="https://www.tiktok.com/@gizegebeyasales?_r=1" class="social-icon"><img src="TIKTOK.png" alt="TIKTOK"></a>
+      <a href="#" class="social-icon"><img src="X.jpg" alt="X"></a>
+      <a href="https://www.instagram.com/gizegebeya?igsh=bnVqdHNseXdqNDg=" class="social-icon"><img src="INSTAGRAM.jpg" alt="instagram"></a>
+      <a href="https://www.facebook.com/profile.php?id=61550732175981" class="social-icon"><img src="FACEBOOK.png" alt="facebook"></a>
+      <a href="https://t.me/gizegebeyasale" class="social-icon"><img src="Telegram channel.jpg" alt="Telegram"></a>
+      <a href="mailto:gizegebeyacompany@gmail.com" class="social-icon"><img src="GMAIL.png" alt="gmail"></a>
       <a href="https://t.me/gizegebeyacompany" class="social-icon"><img src="Telegram.jpg" alt="TELEGRAM"></a>
     </div>
     <div class="qr-codes-footer">
       <a href="https://gizegebeya.github.io/Gize-Gebeya-Customer-s-website/">
-      <img src="QR CODE FOR CUSTOMERS.png" alt="qrcodeforcustomers"></a>
-  </div>
-    </section>
+        <img src="QR CODE FOR CUSTOMERS.png" alt="QR Code for Customers">
+      </a>
+    </div>
   </footer>
 </body>
 </html>
